@startuml
class Sistema{

  String nome
  List<Entidade> entidades
  List<UsuariodoSistema> usuariodoSistema
}
class Usuario  {
  String nome
  String login
  String senha
  List<Sistema> sistema
}

class UsuariodoSistema{
  Long id
  List<Atributo> atributo
  NivelDeAcesso niveldeacesso

}
class Entidade{

  String nome;
  List<Atributo> atributos
}
 Enum NivelDeAcesso{
  ROOT("root")
  ADMIN("admin")
  USER("user")

}

class Atributo{
  String nome;
  String tipo;
  List<RegraAtributo> regras;
}

class RegraAtributo{
  String nome;
  String descricao;
}

class InstanciaSistema{
  Sistema sistema;
  List<InstanciaEntidade> entInstanciadas;
}

class InstanciaEntidade{

  Entidade entidades
  List<InstanciaAtributo> attInstanciados;
}

class InstanciaAtributo{

    Atributo atributo;
    Object valor;
}
Usuario *-- Sistema
UsuariodoSistema *-NivelDeAcesso
UsuariodoSistema *--Atributo
Sistema *-- Entidade
Sistema *- UsuariodoSistema
Entidade *-- Atributo
Atributo *- RegraAtributo

InstanciaSistema *- Sistema
InstanciaSistema *-- InstanciaEntidade
InstanciaEntidade *- Entidade
InstanciaEntidade *-- InstanciaAtributo
InstanciaAtributo *- Atributo

@enduml
